--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<app-navbar></app-navbar>
 <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
@@ -7,6 +8,7 @@
   <!-- <img src="/assets/images/basic-shield.png" alt=""> -->
 </div>
 <!-- <h2>Here are some links to help you start: </h2> -->
+
 <events-list></events-list>
 
 <router-outlet></router-outlet>
