--- a/src/app/events/events-list/events-list.component.html
+++ b/src/app/events/events-list/events-list.component.html
@@ -1,7 +1,7 @@
 <div>
   <h3>Up Comming Angular Events</h3>
   <hr>
-  <div class="well hoverwell thumbnail">
-    <h4>{{event.name}}</h4>
-  </div>
+  <event-thumbnail #thumbnail (eventClick)="handleEventClicked($event)" [event]="event"></event-thumbnail>
+  <h3>{{thumbnail.someProperty}}</h3>
+  <button class="btn btn-primary" (click)="thumbnail.logFoo()">Log me some foo</button>
 </div>
