Angular Templates complete

--- a/src/app/events/event-thumbnail/event-thumbnail.component.css
+++ b/src/app/events/event-thumbnail/event-thumbnail.component.css
@@ -1,4 +1,6 @@
-.pad-left{
-    margin-left: 10px;
-}
+.pad-left{margin-left: 10px;}
 .well div {color: #bbb;}
+.thumbnail {min-height: 210px;}
+.green {color: green !important;}
+.red {color: red !important;}
+.bold { font-weight: bold;}
