--- a/src/app/events/events-list/events-list.component.html
+++ b/src/app/events/events-list/events-list.component.html
@@ -1,7 +1,12 @@
 <div>
   <h3>Up Comming Angular Events</h3>
   <hr>
-  <event-thumbnail #thumbnail (eventClick)="handleEventClicked($event)" [event]="event"></event-thumbnail>
+  <div class="row">
+    <div *ngFor="let event of events" class="col-md-5">
+      <event-thumbnail #thumbnail (eventClick)="handleEventClicked($event)" [event]="event"></event-thumbnail>    
+    </div>
+  </div>
+
   <h3>{{thumbnail.someProperty}}</h3>
   <button class="btn btn-primary" (click)="thumbnail.logFoo()">Log me some foo</button>
 </div>
