--- a/src/app/events/events-list/events-list.component.html
+++ b/src/app/events/events-list/events-list.component.html
@@ -3,10 +3,10 @@
   <hr>
   <div class="row">
     <div *ngFor="let event of events" class="col-md-5">
-      <event-thumbnail #thumbnail (eventClick)="handleEventClicked($event)" [event]="event"></event-thumbnail>    
+      <event-thumbnail #thumbnail (click)="handleEventClicked(event.name)" [event]="event"></event-thumbnail>    
     </div>
   </div>
 
-  <h3>{{thumbnail.someProperty}}</h3>
-  <button class="btn btn-primary" (click)="thumbnail.logFoo()">Log me some foo</button>
+  <!-- <h3>{{thumbnail.someProperty}}</h3> -->
+  <!-- <button class="btn btn-primary" (click)="thumbnail.logFoo()">Log me some foo</button> -->
 </div>
