--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,6 @@
 </div>
 <!-- <h2>Here are some links to help you start: </h2> -->
 
-<events-list></events-list>
+<!-- <events-list></events-list>  -->
 
 <router-outlet></router-outlet>
