--- a/src/app/events/events-list/events-list.component.html
+++ b/src/app/events/events-list/events-list.component.html
@@ -3,7 +3,8 @@
   <hr>
   <div class="row">
     <div *ngFor="let event of events" class="col-md-5">
-      <event-thumbnail #thumbnail (click)="handleEventClicked(event.name)" [event]="event"></event-thumbnail>    
+      <event-thumbnail #thumbnail [event]="event"></event-thumbnail>    
+      <!-- <event-thumbnail #thumbnail (click)="handleEventClicked(event.name)" [event]="event"></event-thumbnail>     -->
     </div>
   </div>
 
