login and profile added

--- a/src/app/user/profile.component.html
+++ b/src/app/user/profile.component.html
@@ -2,18 +2,22 @@
   <h1>Edit Your Profile </h1>
   <hr>
   <div class="col-md-4">
-    <form autocomplete="off" novalidate>
-      <div class="form-group">
+    <form [formGroup]="profileForm" (ngSubmit)="saveProfile(profileForm.value)" autocomplete="off" novalidate>
+      <div class="form-group" [ngClass]="{'error':  !validatefirstName() }">
         <label for="firstName">First Name:</label>
-        <input id="firstName" type="text" class="form-control" placeholder="First Name..." />
+        <em *ngIf="!validatefirstName() && profileForm.controls.firstName.errors.required ">Required</em>
+        <em *ngIf="!validatefirstName() && profileForm.controls.firstName.errors.pattern ">Must start with a Letter !</em>
+        <input formControlName="firstName" id="firstName" type="text" class="form-control" placeholder="First Name..." />
       </div>
-      <div class="form-group">
+      <div class="form-group" class="form-group" [ngClass]="{'error': !validateLastName() }">
         <label for="lastName">Last Name:</label>
-        <input id="lastName" type="text" class="form-control" placeholder="Last Name..." />
+        <em *ngIf="!validateLastName() && profileForm.controls.lastName.errors.required ">Required</em>
+        <em *ngIf="!validateLastName() && profileForm.controls.lastName.errors.pattern ">Must start with a Letter !</em>
+        <input formControlName="lastName" id="lastName" type="text" class="form-control" placeholder="Last Name..." />
       </div>
 
-      <button type="submit" class="btn btn-primary">Save</button>
-      <button type="button" class="btn btn-default">Cancel</button>
+      <button type="submit" class="btn btn-primary" [disabled]="!profileForm.valid">Save</button>
+      <button type="button" class="btn btn-default" (click)="cancel()">Cancel</button>
     </form>
   </div>
 </div>
