--- a/src/app/events/create-session/create-session.component.css
+++ b/src/app/events/create-session/create-session.component.css
@@ -1,5 +1,5 @@
 em { float: right; color: #e05c65; padding-left: 10px  }
-.error input {background-color: #e3c3c5;}
+.error input, .error select, .error textarea {background-color: #e3c3c5;}
 .error ::-webkit-input-placeholder { color: #999; }
 .error ::-moz-input-placeholder { color: #999; }
 .error :-moz-input-placeholder { color: #999; }
