--- a/src/app/events/create-session/create-session.component.html
+++ b/src/app/events/create-session/create-session.component.html
@@ -1,56 +1,47 @@
-<h1>New Event</h1>
-<hr>
-<div class="col-md-6">
-  <form #newEventForm="ngForm" (ngSubmit)="saveEvent(newEventForm.value)" autocomplete="off" novalidate>
-    <div class="form-group" [ngClass]="{'error': newEventForm.controls.name?.invalid && newEventForm.controls.name?.touched}">
-      <label for="eventName">Event Name:</label>
-      <em *ngIf="newEventForm.controls.name?.invalid && (newEventForm.controls.name?.touched)">Required</em>
-      <input (ngModel)="newEvent.name" name="name" required id="name" type="text" class="form-control" placeholder="Name of your event..." />
-    </div>
-    <div class="form-group" [ngClass]="{'error': newEventForm.controls.date?.invalid && newEventForm.controls.date?.touched}">
-      <label for="eventDate">Event Date:</label>
-      <em *ngIf="newEventForm.controls.date?.invalid && (newEventForm.controls.date?.touched)">Required</em>
-      <input (ngModel)="newEvent.date" name="date" required id="eventDate" type="text" class="form-control" placeholder="format (mm/dd/yyyy)..." />
-    </div>
-    <div class="form-group" [ngClass]="{'error': newEventForm.controls.time?.invalid && newEventForm.controls.time?.touched}">
-      <label for="eventTime">Event Time:</label>
-      <em *ngIf="newEventForm.controls.time?.invalid && (newEventForm.controls.time?.touched)">Required</em>
-      <input (ngModel)="newEvent.time" name="time" required id="eventTime" type="text" class="form-control" placeholder="start and end time..." />
-    </div>
-    <div class="form-group" [ngClass]="{'error': newEventForm.controls.price?.invalid && newEventForm.controls.price?.touched}">
-      <label for="eventPrice">Event Price:</label>
-      <em *ngIf="newEventForm.controls.price?.invalid && (newEventForm.controls.price?.touched)">Required</em>
-      <input (ngModel)="newEvent.price" name="price" required id="eventPrice" type="text" type="number" class="form-control" placeholder="event price..." />
-    </div>
-    
-    <div ngModelGroup="location">
-        <div class="form-group">
-            <label for="address">Event Location:</label>
-            <input (ngModel)="newEvent.address" name="address" id="address" type="text" class="form-control" placeholder="Address of event..." />
-          </div>
-          <div class="row">
-            <div class="col-md-6">
-              <input (ngModel)="newEvent.city" name="city" id="city" type="text" class="form-control" placeholder="City..." />
-            </div>
-            <div class="col-md-6" >
-              <input (ngModel)="newEvent.country" name="country" id="country" type="text" class="form-control" placeholder="Country..." />
-            </div>
-          </div>
-    </div>
-
-    <div class="form-group">
-      <label for="onlineUrl">Online Url:</label>
-      <input (ngModel)="onlineUrl" name="onlineUrl" id="onlineUrl" type="text" class="form-control" placeholder="Online Url..." />
-    </div>
-    <div class="form-group" [ngClass]="{'error': newEventForm.controls.imageUrl?.invalid && newEventForm.controls.imageUrl?.touched}">
-      <label for="imageUrl">Image:</label>
-      <em *ngIf="newEventForm.controls.imageUrl?.invalid && newEventForm.controls.imageUrl?.touched && newEventForm.controls.imageUrl?.errors.required">Required</em>
-      <em *ngIf="newEventForm.controls.imageUrl?.invalid && newEventForm.controls.imageUrl?.touched  && newEventForm.controls.imageUrl?.errors.pattern">Must be a png or jpg url</em>
-      <input (ngModel)="imageUrl" name="imageUrl" required pattern=".*\/.*.(png|jpg)" id="imageUrl" type="text" class="form-control" placeholder="url of image..." />
-      <img [src]="newEventForm.controls.imageUrl.value" *ngIf="newEventForm.controls.imageUrl?.valid" />
-    </div>
-    
-    <button type="submit" class="btn btn-primary">Save</button>
-    <button type="button" [disabled]="newEventForm.invalid" class="btn btn-default" (click)="cancel()">Cancel</button>
-  </form>
-</div>
+<div class="col-md-12">
+    <h3>Create Session</h3>
+  </div>
+  <div class="col-md-6">
+    <form [formGroup]="newSessionForm" (ngSubmit)="saveSession(newSessionForm.value)" autocomplete="off">
+      <div class="form-group" [ngClass]="{'error': name.invalid && name.dirty }">
+        <label for="sessionName">Session Name:</label>
+        <em *ngIf="name.invalid && name.dirty">Required</em>
+        <input formControlName="name" id="sessionName" type="text" class="form-control" placeholder="session name..." />
+      </div>
+      <div class="form-group" [ngClass]="{'error': presenter.invalid && presenter.dirty }">
+        <label for="eventDate">Presenter:</label>
+        <em *ngIf="presenter.invalid && presenter.dirty">Required</em>
+        <input formControlName="presenter" id="presenter" type="text" class="form-control" placeholder="presenter..." />
+      </div>
+      <div class="form-group" [ngClass]="{'error': duration.invalid && duration.dirty }"> 
+        <label for="duration">Duration:</label>
+        <em *ngIf="duration.invalid && duration.dirty">Required</em>
+        <select formControlName="duration" class="form-control">
+          <option value="">select duration...</option>
+          <option value="1">Half Hour</option>
+          <option value="2">1 Hour</option>
+          <option value="3">Half Day</option>
+          <option value="4">Full Day</option>
+        </select>
+      </div>
+      <div class="form-group" [ngClass]="{'error': level.invalid && level.dirty }">
+        <label for="level">Level:</label>
+        <em *ngIf="level.invalid && level.dirty">Required</em>
+        <select formControlName="level" class="form-control">
+          <option value="">select level...</option>
+          <option value="Beginner">Beginner</option>
+          <option value="Intermediate">Intermediate</option>
+          <option value="Advanced">Advanced</option>
+        </select>
+      </div>
+      <div class="form-group" [ngClass]="{'error': abstract.invalid && abstract.dirty }">
+        <label for="abstract">Abstract:</label>
+        <em *ngIf="abstract.invalid && abstract.dirty && abstract?.errors.required">Required</em>
+        <em *ngIf="abstract.invalid && abstract.dirty && abstract?.errors.maxlength">Maximum Length 400 Characters</em>
+        <textarea formControlName="abstract" id="abstract" rows=3 class="form-control" placeholder="abstract..."></textarea>
+      </div>
+      <button [disabled]="newSessionForm.invalid" type="submit" class="btn btn-primary">Save</button>
+      <button type="button" class="btn btn-default">Cancel</button>
+    </form>
+  </div>
+  
