--- a/src/app/events/event-details/create-session.component.html
+++ b/src/app/events/event-details/create-session.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-12">
+<!-- <div class="col-md-12">
   <h3>Create Session</h3>
 </div>
 <div class="col-md-6">
@@ -37,4 +37,4 @@
     <button type="submit" class="btn btn-primary">Save</button>
     <button type="button" class="btn btn-default">Cancel</button>
   </form>
-</div>
+</div> -->
