--- a/src/app/events/event-details/session-list.component.html
+++ b/src/app/events/event-details/session-list.component.html
@@ -1,4 +1,4 @@
-<div class="row" *ngFor="let session of sessions">
+<!-- <div class="row" *ngFor="let session of sessions">
   <div class="col-md-10">
     <div class="well">
         <h4>{{session.name}}</h4>
@@ -8,4 +8,4 @@
         <p>{{session.abstract}}</p>
     </div>
   </div>
-</div>
+</div> -->
