--- a/src/app/events/event-details/event-details.component.html
+++ b/src/app/events/event-details/event-details.component.html
@@ -3,15 +3,15 @@
 
   <div class="row">
     <div class="col-md-11">
-      <h2>{{event?.name}} </h2>
+      <h2>{{event?.name | uppercase}} </h2>
     </div>
   </div>
 
   <div class="row">
     <div class="col-md-6">
-      <div><strong>Date:</strong> {{event?.date}}</div>
+      <div><strong>Date:</strong> {{event?.date | date:'shortDate'}}</div>
       <div><strong>Time:</strong> {{event?.time}}</div>
-      <div><strong>Price:</strong> ${{event?.price}}</div>
+      <div><strong>Price:</strong> {{event?.price| currency:'USD'}}</div>
     </div>
     <div class="col-md-6">
       <address>
@@ -26,11 +26,23 @@
     <div class="col-md-2">
       <h3 style="margin: 0">Sessions</h3>
     </div>
+    <div class="col-md-7" style="margin-bottom: 5px">
+      <div class="btn-group btn-group-sm" style="margin-right: 20px; margin-left: 20px">
+        <button class="btn btn-primary" [class.active]="sortyBy==='name'" (click)="sortBy='name'">By Name</button>
+        <button class="btn btn-primary" [class.active]="sortBy==='votes'" (click)="sortBy='votes'">By Votes</button>
+      </div>
+      <div class="btn-group btn-group-sm">
+        <button class="btn btn-primary" [class.active]="filterBy==='all'" (click)="filterBy='all'">All</button>
+        <button class="btn btn-primary" [class.active]="filterBy==='beginner'" (click)="filterBy='beginner'">Beginner</button>
+        <button class="btn btn-primary" [class.active]="filterBy==='intermediate'" (click)="filterBy='intermediate'">Intermidiate</button>
+        <button class="btn btn-primary" [class.active]="filterBy==='advanced'" (click)="filterBy='advanced'">Advanced</button>
+      </div>
+    </div>
     <div *ngIf="!addMode" class="col-md-2">
       <a (click)="addSession()">Add Session</a>
     </div>
     
   </div>
-  <session-list *ngIf="!addMode" [sessions]="event?.sessions"></session-list>
+  <session-list *ngIf="!addMode" [sessions]="event?.sessions" [filterBy]="filterBy" [sortBy]="sortBy"></session-list>
   <create-session *ngIf="addMode" (saveNewSession)="saveNewSession($event)" (cancelAddSession)="cancelAddSession()"></create-session>
 </div>
