--- a/src/app/events/event-thumbnail/event-thumbnail.component.html
+++ b/src/app/events/event-thumbnail/event-thumbnail.component.html
@@ -1,6 +1,6 @@
 <div [routerLink]="['/events', event.id]" class="well hoverwell thumbnail">
-    <h4>{{event?.name}}</h4>
-    <div>Date: {{event?.date}}</div>
+    <h4>{{event?.name | uppercase}}</h4>
+    <div>Date: {{event?.date |date}}</div>
     <div [style.color]="event?.time === '8:00 am' ? 'green' : '#bbb' " [ngClass]="{red: event?.time === '10:00 am', bold: event?.time === '10:00 am'}" [ngSwitch]="event?.time"> Time: {{event?.time}}
     <!-- <div [class.green]="event?.time === '8:00 am'" [ngClass]="{red: event?.time === '10:00 am', bold: event?.time === '10:00 am'}" [ngSwitch]="event?.time"> Time: {{event?.time}} -->
     <!-- <div [ngClass]="getStartTimeClass()" [ngSwitch]="event?.time"> Time: {{event?.time}} -->
@@ -8,7 +8,7 @@
       <span *ngSwitchCase="'10:00 am'">( Late Start )</span>
       <span *ngSwitchDefault>( Normal Start )</span>
     </div>
-    <div>Price: ${{event?.price}}</div>
+    <div>Price: {{event?.price | currency:'USD'}}</div>
     <div *ngIf="event?.location">
       <br>
       <span>Location: {{event?.location?.address}}, </span>
