--- a/src/app/events/session-list/session-list.component.html
+++ b/src/app/events/session-list/session-list.component.html
@@ -1,4 +1,4 @@
-<div class="row" *ngFor="let session of sessions">
+<div class="row" *ngFor="let session of visibleSessions">
   <div class="col-md-10">
     <collapsible-two-window-well>
 
@@ -8,7 +8,7 @@
       </div>
       <div well-body>
         <h6>{{session.presenter}}</h6>
-        <span>Duration: {{session.duration}}</span><br />
+        <span>Duration: {{session.duration| durration}}</span><br />
         <span>Level: {{session.level}}</span>
         <p>{{session.abstract}}</p>
       </div>
