Toastr Service clean up

--- a/src/app/events/event-thumbnail/event-thumbnail.component.html
+++ b/src/app/events/event-thumbnail/event-thumbnail.component.html
@@ -17,5 +17,5 @@
     </div>
     <div [hidden]="!event?.onlineURL">Online Url: {{event?.onlineURL}}</div>
   
-    <button class="btn btn-primary" (click)="handleClickMe()">Click ME</button>
+    <!-- <button class="btn btn-primary" (click)="handleClickMe()">Click ME</button> -->
   </div>
